--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
             <artifactId>vaadin-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- database connection -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Persistence -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -175,6 +188,7 @@
                 </plugins>
             </build>
         </profile>
+        <!--
         <profile>
             <id>integration-test</id>
             <build>
@@ -182,6 +196,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.0.0-M5</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -198,7 +213,9 @@
                 </plugins>
             </build>
         </profile>
+            -->
     </profiles>
+
 
     <repositories>
         <repository>
