--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,24 @@ vaadin.allowed-packages=com.vaadin,org.vaadin,dev.artsupplier
 
 # Open-in-view is only needed if you use lazy-loaded entities in your Flow views.
 spring.jpa.open-in-view=false
+
+# for database mysql
+# Run app at localhost:8080
+#server.port=8080
+
+# DB connection
+spring.datasource.url=jdbc:mysql://localhost:3306/artsupplierdb
+#spring.datasource.username=user1
+#spring.datasource.password=password1
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate options
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Optional: Show SQL queries in console
+spring.jpa.properties.hibernate.show_sql=true
+
+
+
