--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.jpa.open-in-view=false
 
 # DB connection
 spring.datasource.url=jdbc:mysql://localhost:3306/artsupplierdb
-#spring.datasource.username=user1
-#spring.datasource.password=password1
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=user1
+spring.datasource.password=password1
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 # Hibernate options
 spring.jpa.hibernate.ddl-auto=update
